; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/extr_grant-table.c_gnttab_alloc_pages.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/extr_grant-table.c_gnttab_alloc_pages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gnttab_alloc_pages(i32 %0, %struct.page** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.page**, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.page** %1, %struct.page*** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.page**, %struct.page*** %5, align 8
  %9 = call i32 @alloc_xenballooned_pages(i32 %7, %struct.page** %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  store i32 %13, i32* %3, align 4
  br label %26

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.page**, %struct.page*** %5, align 8
  %17 = call i32 @gnttab_pages_set_private(i32 %15, %struct.page** %16)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %14
  %21 = load i32, i32* %4, align 4
  %22 = load %struct.page**, %struct.page*** %5, align 8
  %23 = call i32 @gnttab_free_pages(i32 %21, %struct.page** %22)
  br label %24

24:                                               ; preds = %20, %14
  %25 = load i32, i32* %6, align 4
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %24, %12
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @alloc_xenballooned_pages(i32, %struct.page**) #1

declare dso_local i32 @gnttab_pages_set_private(i32, %struct.page**) #1

declare dso_local i32 @gnttab_free_pages(i32, %struct.page**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
